# kaiFaTaoJian_xie

./: .gitignore  CMakeLists.txt  Makefile  partitions.csv  release.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  JsonPact.c  JsonPact.h  config.h  idf_component.yml  main.c  废案.txt
main/include/: DHT11.h  adcDev.h  board_gpio.h  board_mfrc522.h  board_spi.h  gpioDev.h  iicDev.h  rc522.h  sg90.h  user_nfc.h  ws2812.h
main/src/: DHT11.c  adcDev.c  board_gpio.c  board_mfrc522.c  board_spi.c  gpioDev.c  iicDev.c  rc522.c  sg90.c  user_nfc.c  ws2812.c
