idf_component_register(SRCS "src/board_gpio.c"
                            "src/board_mfrc522.c"
                            "src/board_spi.c"
                            "src/user_nfc.c"
                            "src/sg90.c"
                            "src/DHT11.c"
                            "src/iicDev.c"
                            "src/rc522.c"
                            "src/gpioDev.c"
                            "src/adcDev.c"
                            "src/ws2812.c"
                            "JsonPact.c"
                            "main.c"
                    INCLUDE_DIRS "."
                                 "./include")